@@ -19,6 +19,8 @@ Fixed bugs
 - avoid overwriting set cutoff flag in tightenCoefs(), preprocessConstraintPairs(), and applyFixings() of cons_varbound.c to reject infeasible solutions
 - fix memory leak in exprinterpret_cppad.cpp w.r.t. user expressions
 - adjust bound before checking feasibility in SCIPvarAddVlb() and SCIPvarAddVub() to detect integrality cutoff
+- choose incumbent solution as reference in varFixingsRins() and varFixingsDins() of heur_alns.c to ensure integrality
+- consider variable type in selectInitialVariableRandomly() of heur_gins.c to count integral variables
 
 Build system
 ------------
